<resources>
    <string name="app_name">JourneyMate</string>
    <string name="journey_mate">JourneyMate</string>
    <string name="book_trip">Book Trip</string>
    <string name="journey_mate_logo">JourneyMate logos</string>
    <string name="createyouraccount">Create Your Account</string>
    <string name="name">Enter your name</string>
    <string name="mailaddress">Enter your e-mail address</string>
    <string name="number">Enter your number</string>
    <string name="otp">Enter OTP</string>
    <string name="password">Set password</string>
    <string name="enter_password">Enter your password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="other">Other</string>

    <string name="license_number">License Number</string>
    <string name="vehicle_number">Vehicle Number (e.g. AB 01 CD 1234)</string>
    <string name="vehicle_type">Vehicle Type (Swift, etc)</string>

    <!--DASHBOARD-->
    <string name="edit_profile_details">Edit Profile Details</string>
    <string name="trip_history">Trip History</string>
    <string name="messages">Messages</string>
    <string name="edit_trip">Edit Trip Details</string>
    <string name="settings">Settings</string>
    <string name="help_you_get_back">No worries! We\'re here to help you get back into your account.</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="trip">Trip</string>
    <string name="host">Host</string>
    <string name="join">Join</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="total_seats">Total Seats</string>
    <string name="available_seats">Available Seats</string>
    <string name="enter_date">Enter Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="price_per_person">Price Per Person</string>
    <string name="vehicletype">Vehicle Type (Swift, etc)</string>
    <string name="create_trip">Create Trip</string>
    <string name="enter_start_location">Enter Start Location</string>
    <string name="enter_destination_location">Enter Destination Location</string>
    <string name="search_trip">Search Trip</string>
    <string name="booking_requests">Booking Requests</string>
    <string name="refresh_requests">Refresh Requests</string>
    <string name="log_in_as_captain">Login as Captain</string>
    <string name="login">Login</string>
    <string name="not_a_member_sign_up">Not a member? Sign Up.</string>
    <string name="create_your_captain_account">Create Your Captain Account</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="button_to_verify_otp">Button to verify OTP</string>
    <string name="sign_up">Sign Up</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="save_profile">Save Profile</string>
    <string name="edit_trip_details">Edit Trip Details</string>
    <string name="enter_trip_name">Enter trip name</string>
    <string name="select_trip_date">Select trip date</string>
    <string name="save_trip">Save Trip</string>
    <string name="id_provided_by_banasthali_vidyapith">ID provided by Banasthali Vidyapith</string>
    <string name="verify_id">Verify ID</string>
    <string name="enter_your_vehicle_type_e_g_swift_dzire_etc">Enter your Vehicle Type (e.g. Swift, etc.)</string>
    <string name="enter_your_vehicle_number">Enter your Vehicle Number (e.g. AB 01 CD 1234)</string>
    <string name="enter_your_license_number">Enter your License Number</string>
    <string name="verify_your_id">Verify your ID</string>
    <string name="log_in_as_student">Login as Student</string>
    <string name="welcome">WELCOME</string>
    <string name="login_as_student">Login as Student</string>
    <string name="login_as_captain">Login as Captain</string>
    <string name="delete_account">Delete Account</string>
    <string name="logout">Logout</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="find_your_cab_companion">find your cab companion :)</string>
    <string name="trip_title">Trip Title</string>
    <string name="requests">Requests</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="trip_details">Trip Details</string>
    <string name="requested_by_user">Requested by: User</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="profile_button">Profile Button</string>
    <string name="reset_password">Reset Password</string>
    <string name="save_trip_details">Save Trip Details</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="my_trips">My Trips</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="date">date</string>
    <string name="available_trips">Available Trips</string>
    <string name="edittrip">Edit Trip</string>
    <string name="forgotyourpassword">Forgot Your Password?</string>
    <string name="chat_list">Chat List</string>
    <string name="type_a_message">type a message...</string>
    <string name="send">Send</string>

</resources>