<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/anakiwa"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="790dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="40dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:src="@drawable/signup_illus"
                />

            <TextView
                android:id="@+id/createyouraccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/create_your_account"
                android:textColor="@color/st_tropaz"
                android:textSize="21sp"
                android:textStyle="bold"
                android:fontFamily="times new roman"/>

            <TextView
                android:id="@+id/verify_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/otp_verification"
                android:textColor="@color/st_tropaz"
                android:textSize="30sp"
                android:textStyle="bold"
                android:fontFamily="times new roman"
                android:visibility="gone"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_layout_view"
                android:ems="10"
                android:hint="@string/name"
                android:padding="10sp"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/emailaddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_layout_view"
                android:ems="10"
                android:hint="@string/mailaddress"
                android:padding="10sp"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_layout_view"
                android:ems="10"
                android:hint="@string/number"
                android:padding="10sp"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_layout_view"
                android:ems="10"
                android:hint="@string/password"
                android:padding="10sp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_layout_view"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:padding="10sp"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp" />


            <RadioGroup
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:background="@drawable/bg_layout_view">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:text="@string/gender"
                    android:padding="10sp"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="14sp" />

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/female"
                    android:textSize="12sp"
                    android:textColor="@color/dark_gray" />

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/male"
                    android:textSize="14sp"
                    android:textColor="@color/dark_gray"/>

                <RadioButton
                    android:id="@+id/gender_other"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/other"
                    android:textSize="12sp"
                    android:textColor="@color/dark_gray"/>
            </RadioGroup>

            <EditText
                android:id="@+id/otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_layout_view"
                android:padding="10sp"
                android:ems="10"
                android:hint="@string/otp"
                android:inputType="number"
                android:textColorHint="@color/dark_gray"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:visibility="gone"/>

            <Button
                android:id="@+id/generate_otp_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/generate_otp"
                android:textSize="14sp"
                android:backgroundTint="@color/san_juan"
                android:textColor="@color/white"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/verify_otp_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/verify_otp"
                android:contentDescription="@string/button_to_verify_otp"
                android:textSize="14sp"
                android:backgroundTint="@color/san_juan"
                android:textColor="@color/white"
                android:visibility="gone"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/sign_up"
                android:textSize="14sp"
                android:backgroundTint="@color/san_juan"
                android:textColor="@color/white"
                android:visibility="gone"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </ScrollView>
</ScrollView>
