<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/anakiwa">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_trip_details"
        android:gravity="center"
        android:fontFamily="times new roman"
        android:textColor="@color/st_tropaz"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/glacier"
        android:orientation="vertical"
        android:padding="10dp">


        <EditText
            android:id="@+id/editTextStartLocation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/enter_start_location"
            android:background="@drawable/bg_layout_view"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextDestination"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/enter_destination_location"
            android:background="@drawable/bg_layout_view"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextTotalSeats"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/total_seats"
            android:inputType="number"
            android:background="@drawable/bg_layout_view"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextAvailableSeats"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/available_seats"
            android:inputType="number"
            android:background="@drawable/bg_layout_view"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextTotalFare"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/price_per_person"
            android:inputType="numberDecimal"
            android:background="@drawable/bg_layout_view"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnSaveTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_trip_details"
            android:backgroundTint="@color/san_juan"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:textSize="14sp"
            android:layout_marginTop="20dp"/>
    </LinearLayout>
</LinearLayout>
