<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/anakiwa">

    <TextView
        android:id="@+id/idVerification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit_your_profile"
        android:fontFamily="times new roman"
        android:textColor="@color/st_tropaz"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@color/glacier">


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_layout_view"
            android:padding="10dp"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_layout_view"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/mailaddress"
            android:inputType="textEmailAddress"
            android:enabled="false"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_layout_view"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/number"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_layout_view"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/enter_old_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_layout_view"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/enter_new_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray"
            android:textSize="14sp"/>


        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/save_profile"
            android:backgroundTint="@color/san_juan"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:textSize="14sp"/>

    </LinearLayout>
</LinearLayout>
