<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@drawable/bg_layout_view">

    <!-- Trip Title -->
    <TextView
        android:id="@+id/tvTripTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textColor="@color/san_juan2"/>

    <!-- Trip Details -->
    <TextView
        android:id="@+id/tvTripDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_details"
        android:textSize="12sp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/dark_gray"/>

    <!-- Book Trip Button -->

    <Button
        android:id="@+id/btnBookTrip"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:text="@string/book_trip"
        android:layout_gravity="end"
        android:textSize="15dp"
        android:backgroundTint="@color/st_tropaz"
        android:textColor="@color/white"/>
</LinearLayout>
